[package]
name = "ad9361-rs"
version = "0.1.0"
authors = ["Pep Zorro <pepelzorro@example.com>"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
description = "Bindings to the AD9361 part of the Analog Devices Inc. no-OS library"
keywords = ["dsp", "sdr", "analog-devices"]
repository = "https://github.com/pepelzorro/ad9361-rs"
license = "MIT/Apache-2.0"
readme = "README.md"

# include only the necessary parts of analogdevicesinc/no-os
include = [
  "**/*.rs",
  "/*.md",
  "LICENSE-*",
  "!.gdb_history",              # From gitignore
  # csrc
  "csrc/*",
  # no-os
  "no-os/include/*",
  # ad9361
  "no-os/drivers/rf-transceiver/ad9361/*",
]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[features]
default = ["std", "ad9361_device"]
std = ["managed/std"]
ad9361_device = []
ad9364_device = []
ad9363a_device = []
# activate debug messages from the ad9361 lib
debug_messages = []

[dependencies]
cpp = "0.5.6"
cty = "0.2"
log = { version = "0.4", default-features = false }
managed = { version = "0.8", default-features = false }
paste = "1.0"
embedded-hal = "0.2"

[build-dependencies]
cc = { version = "1.0.73", features = ["parallel"] }
bindgen = "0.59.2"
cpp_build = "0.5.6"
glob = "0.3.0"
fs_extra = "1.2.0"
error-chain = "0.12.4"

[dev-dependencies]
linux-embedded-hal = "0.3"
env_logger = "0.9.0"
serial_test = "0.6.0"
